--- a/model/surface_simu.ipynb
+++ b/model/surface_simu.ipynb
@@ -2,39 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7d0ab47d-103b-4cb6-9165-51366786ddc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3c1e8498-8ab1-491d-b456-421d97b5fb68",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/main-spack-instance/spack/var/spack/environments/release_v0_1_202109_hotfix/.spack-env/view/lib/python3.8/site-packages/tvb/datatypes/surfaces.py:63: UserWarning: Geodesic distance module is unavailable; some functionality for surfaces will be unavailable.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "This is a trail to test whether it is approachable to do surface modeling in single brain region.\n",
@@ -51,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8dda751e-d7e2-47b9-bc51-08c75fe73bf1",
    "metadata": {},
    "outputs": [],
@@ -64,18 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "efab2c3a-b8f8-4e16-8468-198cfdb9902e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING  File 'hemispheres' not found in ZIP.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulator.Simulator()\n",
     "# white_matter = connectivity.Connectivity.from_file()\n",
@@ -107,8 +82,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f26aad93-9ddf-43f9-af67-3ae062466e97",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Wilson Cowan model\n",
+    "$$\\dot{E}_k= \\dfrac{1}{\\tau_e} (-E_k  + (k_e - r_e E_k) \\mathcal{S}_e (\\alpha_e \\left( c_{ee} E_k - c_{ei} I_k  + P_k - \\theta_e + \\mathbf{\\Gamma}(E_k, E_j, u_{kj}) + W_{\\zeta}\\cdot E_j + W_{\\zeta}\\cdot I_j\\right) ))\\\\\n",
+    "\\dot{I}_k= \\dfrac{1}{\\tau_i} (-I_k  + (k_i - r_i I_k) \\mathcal{S}_i (\\alpha_i \\left( c_{ie} E_k - c_{ee} I_k  + Q_k - \\theta_i + \\mathbf{\\Gamma}(E_k, E_j, u_{kj}) + W_{\\zeta}\\cdot E_j + W_{\\zeta}\\cdot I_j\\right) ))$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9c54dd87-f38d-40e6-9265-d88cea964433",
    "metadata": {},
    "outputs": [],
@@ -142,11 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92928a63-9e58-460a-9ccc-6ae8a9e82e89",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use the regional mapping data in the cortex folder\n",
     "source_path = '/mnt/user/drive/My Libraries/tutorials&explorations/data/cortex/cortex_843.zip'\n",
     "mapping_path = '/mnt/user/drive/My Libraries/tutorials&explorations/data/cortex/regionMapping_843_2.txt'\n",
     "local_connectivity_path = '/mnt/user/drive/My Libraries/tutorials&explorations/data/cortex/local_connectivity_843.mat'"
@@ -154,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "09fa8078-ab8d-49e1-915c-4526c96bc922",
    "metadata": {},
    "outputs": [],
@@ -163,20 +151,20 @@
     "default_cortex = cortex.Cortex.from_file(source_file=source_path, region_mapping_file=mapping_path)\n",
     "default_cortex.coupling_strength = numpy.array([2**-10])\n",
     "default_cortex.local_connectivity = local_connectivity.LocalConnectivity.from_file(local_connectivity_path)\n",
-    "default_cortex.region_mapping_data.connectivity = white_matter\n",
+    "default_cortex.region_mapping_data.connectivity = two_regions #white_matter\n",
     "default_cortex.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b66e33a8-3694-40b9-a22b-55c33f8658ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Initialise some Monitors with period in physical time\n",
-    "mon_tavg = monitors.TemporalAverage(period=2**-1)\n",
-    "mon_savg = monitors.SpatialAverage(period=2**-1)\n",
+    "mon_tavg = monitors.TemporalAverage(period=0.9765625) # Sampling period: ms; 1024 Hz\n",
+    "mon_savg = monitors.SpatialAverage(period=0.9765625)\n",
     "# load the default region mapping\n",
     "# rm = region_mapping.RegionMapping.from_file(source_file=mapping_path)\n",
     "# mon_eeg = monitors.EEG.from_file() # require whole brain mapping\n",
@@ -187,47 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "abc6dfc8-45e1-4f84-8fa3-52c541835d4a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<h3>Simulator</h3>\n",
-       "<thead><tr><th></th><th style=\"text-align:left;width:40%\">value</th></tr></thead>\n",
-       "<tbody>\n",
-       "<tr><td>Type</td><td style=\"text-align:left;\"><pre>Simulator</pre></td>\n",
-       "<tr><td>conduction_speed</td><td style=\"text-align:left;\"><pre>3.0</pre></td>\n",
-       "<tr><td>connectivity</td><td style=\"text-align:left;\"><pre>Connectivity gid: a1174cb6-0245-4b64-a892-94e14fea5d3c</pre></td>\n",
-       "<tr><td>coupling</td><td style=\"text-align:left;\"><pre>Linear gid: 1b44d2f4-b8ce-41e0-9f89-72dbdc143d30</pre></td>\n",
-       "<tr><td>gid</td><td style=\"text-align:left;\"><pre>UUID('e91a5c80-c0a6-4c53-8bea-1524e3cfa2c5')</pre></td>\n",
-       "<tr><td>initial_conditions</td><td style=\"text-align:left;\"><pre>None</pre></td>\n",
-       "<tr><td>integrator</td><td style=\"text-align:left;\"><pre>HeunStochastic gid: 262cda26-caeb-4359-849e-b7c5100ab229</pre></td>\n",
-       "<tr><td>model</td><td style=\"text-align:left;\"><pre>WilsonCowan gid: 341e64ae-81a7-4127-8455-20b6c86749af</pre></td>\n",
-       "<tr><td>monitors</td><td style=\"text-align:left;\"><pre>(<tvb.simulator.monitors.SpatialAverage object at 0x7f0a82c5f220>,)</pre></td>\n",
-       "<tr><td>simulation_length</td><td style=\"text-align:left;\"><pre>1000000.0</pre></td>\n",
-       "<tr><td>stimulus</td><td style=\"text-align:left;\"><pre>None</pre></td>\n",
-       "<tr><td>surface</td><td style=\"text-align:left;\"><pre>Cortex gid: 1ce516ca-aaf5-46e7-85ea-6ac9f7327d5d</pre></td>\n",
-       "<tr><td>title</td><td style=\"text-align:left;\"><pre>Simulator gid: e91a5c80-c0a6-4c53-8bea-1524e3cfa2c5</pre></td>\n",
-       "</tbody></table>"
-      ],
-      "text/plain": [
-       "<tvb.simulator.simulator.Simulator at 0x7f0a82c5f670>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Initialise Simulator -- Model, Connectivity, Integrator, Monitors, and surface.\n",
     "sim = simulator.Simulator(model = mod, connectivity = two_regions,\n",
     "                          coupling = c, \n",
     "                          integrator = integ, monitors = (mon_savg,),\n",
-    "                          simulation_length = 1000000,\n",
+    "                          simulation_length = 50000, #1000000,\n",
     "                          surface = default_cortex)\n",
     "\n",
     "sim.configure()"
@@ -261,8 +218,12 @@
     "        savg_time.append(savg[0][0])\n",
     "        savg_data.append(savg[0][1])\n",
     "        if len(savg_time) == 200000:\n",
+    "            SAVG = numpy.array(savg_data)\n",
+    "            v1 = SAVG[:,0,0,0]\n",
+    "            v2 = SAVG[:,0,1,0]\n",
     "            df = pd.DataFrame({'time':savg_time,\n",
-    "                   'sagv':savg_data})\n",
+    "                               's_v1':v1,\n",
+    "                              's_v2':v2})\n",
     "            if batch == 0:\n",
     "                df.to_csv(result_name, index=False, header=False)\n",
     "            else:\n",
@@ -270,6 +231,7 @@
     "            batch +=1\n",
     "            last_t = savg_time\n",
     "            latt_d = savg_data\n",
+    "            df= []\n",
     "            savg_data = []\n",
     "            savg_time = []\n",
     "\n",
@@ -285,18 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result = sim.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d603a9f8-9984-4357-ab67-59e8129476a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SAVG = numpy.array(savg_data)\n",
-    "SAVG.shape"
+    "# result = sim.run()  # another way to run the simulation"
    ]
   },
   {
@@ -306,9 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "savg_time = numpy.array(last_t)\n",
-    "savg_time = savg_time.astype(float)\n",
-    "time_s = last_t/10000"
+    "savg_ms = numpy.array(savg_time) #last_t)\n",
+    "savg_ms = savg_ms.astype(float)\n",
+    "time_s = savg_ms/10000"
    ]
   },
   {
@@ -320,27 +271,27 @@
    },
    "outputs": [],
    "source": [
-    "#Make the lists numpy.arrays for easier use.\n",
-    "# TAVG = numpy.array(tavg_data)\n",
-    "SAVG = numpy.array(latt_d)\n",
-    "# EEG = numpy.array(eeg_data)\n",
-    "\n",
+    "SAVG = numpy.array(savg_data) #latt_d)\n",
     "\n",
     "#Plot region averaged time series\n",
     "fig = plt.figure(figsize=(15,5))\n",
     "ax = fig.add_subplot(111)\n",
-    "# ax.plot(savg_time[500:1500], SAVG[500:1500, 0, :, 0])\n",
-    "ax.plot(time_s[80000:82500], SAVG[80000:82500, 0, :, 0])\n",
+    "ax.plot(savg_time[500:1500], SAVG[500:1500, 0, :, 0])\n",
+    "# ax.plot(time_s[80000:82500], SAVG[80000:82500, 0, :, 0])\n",
     "title(\"Region average\")\n",
     "plt.xlabel(\"time/ms\")\n",
-    "#Plot EEG time series\n",
-    "# figure(2)\n",
     "\n",
-    "# plot(eeg_time, EEG[:, 0, :, 0])\n",
-    "# title(\"EEG\")\n",
-    "\n",
-    "#Show them\n",
     "show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeecbcff-df31-4f52-99fe-953febca87d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savg_time.shape"
    ]
   },
   {
@@ -361,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the data file\n",
     "df = pd.read_csv(result_name, header = None)\n",
     "total_rows=len(df.axes[0])\n",
     "print(\"Number of Rows: \"+str(total_rows))\n",
