Corrected the penalty for evaluation.py

--- a/model/gen_random_sig.ipynb
+++ b/model/gen_random_sig.ipynb
@@ -134,6 +134,151 @@
     "data = df[1].to_numpy()\n",
     "peak = get_psd_peak(data, dt=1,save_path=result_name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eda68bc-0555-4a96-aa20-be1903d3719f",
+   "metadata": {},
+   "source": [
+    "### Get the filtered as well as hilbert transformed signal of old data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28aedf49-500f-4a54-9f3b-f63b68214396",
+   "metadata": {},
+   "source": [
+    "2022-06-27_c_ee6_c_ei22_results.csv\n",
+    "2022-07_15_randm2_results.csv\n",
+    "2022-06-26_c_ee11.57199543729056_c_ei10.307919639315172_dt1_results.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "450dd086-d372-4b5a-a6f4-2969a06e2d50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating RawArray with float64 data, n_channels=1, n_times=1000000\n",
+      "    Range : 0 ... 999999 =      0.000 ...   999.999 secs\n",
+      "Ready.\n",
+      "Creating RawArray with float64 data, n_channels=1, n_times=1000000\n",
+      "    Range : 0 ... 999999 =      0.000 ...   999.999 secs\n",
+      "Ready.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_name = '/mnt/user/drive/My Libraries/tutorials&explorations/V1criticality/data/2022-06-26_c_ee11.57199543729056_c_ei10.307919639315172_dt1_results.csv'\n",
+    "dt=1\n",
+    "df = pd.read_csv(result_name, header = None)\n",
+    "data = df[1].to_numpy()\n",
+    "raw = dfa.load_data([data], sfreq = 1000/dt)\n",
+    "\n",
+    "raw.filter(0.5, 4, fir_window='hamming', fir_design=\"firwin\", verbose=0)\n",
+    "filtered_d, filtered_t = raw[:]\n",
+    "filtered_sig = filtered_d[0] - np.mean(filtered_d[0])\n",
+    "df_f = pd.DataFrame({'time':filtered_t, 'data':filtered_sig})\n",
+    "filtered_name=result_name[:result_name.find('results.csv')]+'filtered'+str(0.5)+'_'+str(4)+'.csv'\n",
+    "df_f.to_csv(filtered_name, mode='w', index=False, header=False)\n",
+    "\n",
+    "filtered = dfa.load_data([filtered_sig], sfreq = 1000/dt)\n",
+    "filtered.apply_hilbert(envelope=True)\n",
+    "hilb, filtered_t = raw[:]\n",
+    "df_h = pd.DataFrame({'time':filtered_t, 'data':hilb[0]})\n",
+    "hilbert_name=result_name[:result_name.find('results.csv')]+'hilbert'+str(0.5)+'_'+str(4)+'.csv'\n",
+    "df_h.to_csv(hilbert_name, mode='w', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "189c4d2a-0d71-439e-bc89-12aca58d95ce",
+   "metadata": {},
+   "source": [
+    "### Get the fitting model of old data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "470dc07d-38d7-4911-9194-6051a2f74534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "52f14609-4df1-4b86-9e5d-446c657b7c31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating RawArray with float64 data, n_channels=1, n_times=1000000\n",
+      "    Range : 0 ... 999999 =      0.000 ...   500.000 secs\n",
+      "Ready.\n",
+      "[0.99263584]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_name = '/mnt/user/drive/My Libraries/tutorials&explorations/V1criticality/data/2022-06-26_c_ee11.57199543729056_c_ei10.307919639315172_dt1_results.csv'\n",
+    "dt=1\n",
+    "df = pd.read_csv(result_name, header = None)\n",
+    "data = df[1].to_numpy()\n",
+    "raw = dfa.load_data([data])\n",
+    "dfa_exp, _, x, y, model, residual = dfa.compute_DFA(raw, return_fitting=True, l_freq=0.5, h_freq=4)\n",
+    "# plt.figure()#figsize=(9.4,5))\n",
+    "# plt.plot(x,y)\n",
+    "# plt.xlabel('lg(window size/sec)')\n",
+    "# plt.ylabel('lg(flucturation)')\n",
+    "# poly1d_fn = np.poly1d(model) \n",
+    "# plt.plot(x,y, 'ro', x, poly1d_fn(x))\n",
+    "# plt.show()\n",
+    "# plt.savefig('/mnt/user/drive/My Libraries/tutorials&explorations/V1criticality/data/2022-06-27_c_ee6_c_ei22_results.svg',dpi=350)\n",
+    "SSE = residual\n",
+    "diff = y - y.mean()\n",
+    "square_diff = diff ** 2\n",
+    "SST = square_diff.sum()\n",
+    "\n",
+    "###  Now getting the coefficient of determination (R2)\n",
+    "R2 = 1 - SSE/SST \n",
+    "print(R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "53a90bc8-1a76-4915-91d8-415387e6e8e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(9.2,5))\n",
+    "plt.rc('font', size=16) #controls default text size\n",
+    "plt.plot(x,y)\n",
+    "plt.xlabel('lg(window size/sec)')\n",
+    "plt.ylabel('lg(flucturation)')\n",
+    "poly1d_fn = np.poly1d(model) \n",
+    "plt.plot(x,y, 'ro', x, poly1d_fn(x))\n",
+    "plt.show()\n",
+    "plt.savefig('/mnt/user/drive/My Libraries/tutorials&explorations/V1criticality/data/2022-07_15_randm2_results.svg',dpi=350)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0331dc19-6fa0-419d-97e2-8eac94a8af20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
